# APG

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
configuration/: root_dir.h.in
example_data/: folklore.txt  raceforspace.txt
inc/: album_info.h  album_info.hpp  display.h  display.hpp  root_dir.h  root_director.h
src/: album_info.hpp  main.cpp
